[package]
name = "radioactive"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chumsky = "0.8.0"
fixed_width = "0.5.0"
fixed_width_derive = "0.5.0"
flagset = "0.4.3"
float-pretty-print = "0.1.1"
mdbsql = "0.1.2"
num-derive = "0.3"
num-traits = "0.2"
once_cell = "1.9.0"
petgraph = "0.6.0"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_plain = "1"
serde_with = "1"
thiserror = "1"
